Fix DataTables spacing
Fixes spacing between spacing between the text `Showing x to y of z
entries` and `x row selected` when a user clicks checkboxes next to
claims on the Allocations page.

--- a/app/webpack/stylesheets/components/_table.scss
+++ b/app/webpack/stylesheets/components/_table.scss
@@ -145,6 +145,7 @@ tr {
   }
 
   .select-item {
+    margin-left: govuk-spacing(3);
     font-weight: bold;
   }
 
